--- a/06-booleans.html
+++ b/06-booleans.html
@@ -10,6 +10,28 @@
     
     <script>
 
+      console.log(3 > 5 - 5);
+
+      console.log(5 === '5.00');
+
+      if (false) { 
+        console.log('hello');
+      } 
+      else {
+        console.log('else')
+      }
+
+      const age = 15;
+
+      if (age >= 16) {
+        console.log('You can drive');
+      }
+      else if (age >= 14) {
+        console.log('Almost there.');
+      }
+      else {
+        console.log('You can not drive');
+      }
     </script>
   </body>
 </html>
